--- a/app/www/plantilla.html
+++ b/app/www/plantilla.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <link rel="stylesheet" type="text/css" href="css/materialize.min.css" />
+    <link rel="stylesheet" type="text/css" href="css/animate.css" />
     <title>Inicio</title>
   </head>
   <body>
@@ -28,5 +29,6 @@
 
   <!--Import Scripts-->
   <script src="js/materialize.min.js"></script>
+  <script src="js/animation.js"></script>
   <!--End Import Scripts-->
 </html>
